added env vars to devops yaml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,5 @@ pool:
 steps:
 - script: sbt clean
   displayName: 'Running $ sbt clean'
-- script: sbt buildAndPublish
+- script: sbt buildAndPublish -DCLOUDFLOW_DOCKER_REGISTRY=$(cloudflow.docker.registry) -DCLOUDFLOW_DOCKER_REPOSITORY=$(cloudflow.docker.repository)
   displayName: 'Running $ sbt buildAndPublish'
